--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,16 @@
 /* General Styles------------------------------------ */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
 }
-
-
 
 /*Dashboard Styles ------------------------------------*/
 .dashboard-container {
@@ -50,7 +55,7 @@ body {
   left: 0;
   height: 100%;
   width: 15%;
-  min-width:60px;
+  min-width: 60px;
   box-sizing: initial;
 }
 .dashboard-side-bar {
@@ -58,7 +63,7 @@ body {
   width: 100%;
   height: 100%;
   top: 0px;
-  left: 5px;
+  left: 0px;
   position: relative;
   display: block;
   overflow: hidden;
@@ -135,11 +140,11 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
-  .dashboard-side-bar{
-    width:60px;
+  .dashboard-side-bar {
+    width: 60px;
   }
-  .dashboard-sidebar-container{
-    width:60px;
+  .dashboard-sidebar-container {
+    width: 60px;
   }
 }
 /* registration form styles -------------------------------*/
@@ -179,7 +184,6 @@ body {
   width: 30%;
 }
 
-
 /* login-page styles -------------------------------- */
 
 .login-body {
@@ -203,7 +207,6 @@ body {
 
 .login-card {
   border-width: 0;
-
 }
 
 .login-main {
