--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,7 +143,7 @@ body {
   margin-bottom: 120px;
 }
 
-.admin-logout{
+.admin-settings{
   margin-bottom: 280px;
 }
 @media screen and (max-width: 1200px) {
@@ -156,11 +156,15 @@ body {
 .sub-division{
   padding: 0;
   margin: 0;
-  position:relative;
+  position:static;
   float:right;
   height:100%;
   width:81%;
-  background-color: grey;
+  display:none;
+}
+
+.display{
+  display:inline
 }
 .division-maximized{
   width: 95%;
@@ -169,7 +173,6 @@ body {
   
   .sub-division{
     width:94%;
-    left:100px; 
 
   }
 }
