--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,7 +67,7 @@ body {
   width: 100%;
   height: 100%;
   top: 0px;
-  left: 0px;
+  left: 5px;
   position: relative;
   display: block;
   overflow: hidden;
@@ -159,31 +159,56 @@ body {
     width: 60px;
   }
 }
-/*data management division styles--------------------------*/
+/*sub divisions styles--------------------------*/
 .sub-division{
   padding: 0;
   margin: 0;
-  position:static;
   float:right;
+  right:0;
   height:100%;
   width:81%;
-  display:none;
-  background-color: grey;
+  display:inline; 
+  overflow: hidden;
 }
 
-.display{
-  display:inline;
-}
-.division-maximized{
-  width: 95%;
-}
 @media screen and (max-width: 1200px) {
   
   .sub-division{
     width:94%;
-
+    position:relative;
+    left:70px;
   }
 }
+/*data management division styles---------------*/
+.data-heading{
+  border-bottom: black 1px solid;
+}
+.data-search-bar{
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.data-table{
+  border-top:grey 1px solid;
+  margin-top: 1%;
+  box-shadow:0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-bottom: grey 1px solid;
+  margin-bottom: 1%;
+  font-size: 15px;
+}
+.data-table-row:hover{
+  display: absolute;
+  height: 30px;
+}
+.data-edit{
+  font-size: 20px;
+}
+.data-delete{
+  padding-top: 5px;
+}
+.division-maximized{
+  width: 95%;
+}
+
 /* registration form styles -------------------------------*/
 
 .register-container {
