--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,182 @@ body {
   height: 100%;
 }
 
+/* index page Styles------------------------------------ */
+
+.index-body {
+  background: rgb(219, 226, 226);
+}
+
+.index-row {
+  background: white;
+  border-radius: 30px;
+  box-shadow: 12px 12px 22px;
+
+  display: flex;
+}
+
+.index-login-form{
+  padding-top: 100px;
+}
+
+/* image */
+
+.index-img {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+/* Buttons */
+
+.index-btn-container{
+  padding: 10px;
+  padding-top: 20px;
+}
+
+.index-btn1 {
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+
+.index-btn1:hover {
+  background: white;
+  border: 1px solid;
+  color: black;
+}
+
+.form-row{
+  display: flex;
+}
+
+/* select box*/
+
+/* select:invalid {
+  color: gray;
+}
+option {
+  color: black;
+} */
+
+/*.select-box {
+  position: relative;
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+}
+
+.select-box .options-container {
+  background: #2f3640;
+  color: #f5f6fa;
+  max-height: 0;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s;
+  border-radius: 8px;
+  overflow: hidden;
+
+  order: 1;
+}
+
+.selected {
+  background: #2f3640;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  color: #f5f6fa;
+  position: relative;
+
+  order: 0;
+}
+
+.selected::after {
+  content: "";
+  background: url("img/arrow-down.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  position: absolute;
+  height: 100%;
+  width: 32px;
+  right: 10px;
+  top: 5px;
+
+  transition: all 0.4s;
+}
+
+.select-box .options-container.active {
+  max-height: 120px;
+  opacity: 1;
+  overflow-y: scroll;
+  margin-top: 54px;
+}
+
+.select-box .options-container.active + .selected::after {
+  transform: rotateX(180deg);
+  top: -6px;
+}
+
+.select-box .options-container::-webkit-scrollbar {
+  width: 8px;
+  background: #0d141f;
+  border-radius: 0 8px 8px 0;
+}
+
+.select-box .options-container::-webkit-scrollbar-thumb {
+  background: #525861;
+  border-radius: 0 8px 8px 0;
+}
+
+.select-box .option,
+.selected {
+  padding: 12px 24px;
+  cursor: pointer;
+}
+
+.select-box .option:hover {
+  background: #414b57;
+}
+
+.select-box label {
+  cursor: pointer;
+}
+
+.select-box .option .radio {
+  display: none;
+}
+
+/* Searchbox */
+
+/*.search-box input {
+  width: 100%;
+  padding: 12px 16px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  position: static;
+  border-radius: 8px 8px 0 0;
+  z-index: 100;
+  border: 8px solid #2f3640;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+}
+
+.search-box input:focus {
+  outline: none;
+}
+
+.select-box .options-container.active ~ .search-box input {
+  opacity: 1;
+  pointer-events: auto;
+}*/
+
 /*Dashboard Styles ------------------------------------*/
 .dashboard-container {
   height: 100%;
