--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,13 +15,26 @@ body {
 /* index page Styles------------------------------------ */
 
 .index-body {
-  background: rgb(219, 226, 226);
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(156,45,212,1) 50%);
+}
+
+.index-main{
+  position: absolute;
+
+  width: 80%;
+  
+
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+
 }
 
 .index-row {
   background: white;
   border-radius: 30px;
-  box-shadow: 12px 12px 22px;
+  box-shadow: 2px 2px 22px;
 
   display: flex;
 }
@@ -30,12 +43,30 @@ body {
   padding-top: 100px;
 }
 
+.index-form-container{
+  margin-top: 17%;
+
+  padding: 20px;
+  text-align: center;
+
+}
+
 /* image */
 
 .index-img {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
+
+/* input */
+
+.index-input-container{
+  width: 100%;
+  padding: 10px;
+
+  padding-bottom: 20px;
+}
+
 
 /* Buttons */
 
@@ -49,18 +80,24 @@ body {
   outline: none;
   height: 50px;
   width: 100%;
-  background-color: black;
+  background-color: rgba(156,45,212,1);
   color: white;
   border-radius: 4px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+
+  letter-spacing: 5px;
+
+  transition-duration: 0.2s;
 }
 
 .index-btn1:hover {
   background: white;
-  border: 1px solid;
-  color: black;
+  border: 1px solid rgba(156,45,212,1);
+  color: rgba(156,45,212,1);
+
+  transition-duration: 0.2s;
 }
 
 .form-row{
