--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -108,126 +108,6 @@ body {
   font-size: 20pt;
 }
 
-/* select box*/
-
-/* select:invalid {
-  color: gray;
-}
-option {
-  color: black;
-} */
-
-/*.select-box {
-  position: relative;
-  display: flex;
-  width: 400px;
-  flex-direction: column;
-}
-
-.select-box .options-container {
-  background: #2f3640;
-  color: #f5f6fa;
-  max-height: 0;
-  width: 100%;
-  opacity: 0;
-  transition: all 0.4s;
-  border-radius: 8px;
-  overflow: hidden;
-
-  order: 1;
-}
-
-.selected {
-  background: #2f3640;
-  border-radius: 8px;
-  margin-bottom: 8px;
-  color: #f5f6fa;
-  position: relative;
-
-  order: 0;
-}
-
-.selected::after {
-  content: "";
-  background: url("img/arrow-down.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-
-  position: absolute;
-  height: 100%;
-  width: 32px;
-  right: 10px;
-  top: 5px;
-
-  transition: all 0.4s;
-}
-
-.select-box .options-container.active {
-  max-height: 120px;
-  opacity: 1;
-  overflow-y: scroll;
-  margin-top: 54px;
-}
-
-.select-box .options-container.active + .selected::after {
-  transform: rotateX(180deg);
-  top: -6px;
-}
-
-.select-box .options-container::-webkit-scrollbar {
-  width: 8px;
-  background: #0d141f;
-  border-radius: 0 8px 8px 0;
-}
-
-.select-box .options-container::-webkit-scrollbar-thumb {
-  background: #525861;
-  border-radius: 0 8px 8px 0;
-}
-
-.select-box .option,
-.selected {
-  padding: 12px 24px;
-  cursor: pointer;
-}
-
-.select-box .option:hover {
-  background: #414b57;
-}
-
-.select-box label {
-  cursor: pointer;
-}
-
-.select-box .option .radio {
-  display: none;
-}
-
-/* Searchbox */
-
-/*.search-box input {
-  width: 100%;
-  padding: 12px 16px;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  position: static;
-  border-radius: 8px 8px 0 0;
-  z-index: 100;
-  border: 8px solid #2f3640;
-
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.4s;
-}
-
-.search-box input:focus {
-  outline: none;
-}
-
-.select-box .options-container.active ~ .search-box input {
-  opacity: 1;
-  pointer-events: auto;
-}*/
 
 /*Dashboard Styles ------------------------------------*/
 .dashboard-container {
@@ -547,3 +427,173 @@ option {
 .login-btn-signup:active {
   transition: 50ms ease-in;
 }
+
+
+/* 
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+*/
+
+/* This is a general css can be used for all the dropdowns */
+
+.select-box {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 5px;
+
+  width: 100%;
+  
+}
+
+.select-box .options-container {
+  background: #006aff;
+  color: #f5f6fa;
+  max-height: 0;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s;
+  border-radius: 5px;
+  overflow: hidden;
+
+  position: absolute;
+  top: 60px;
+
+  order: 1;
+}
+
+.selected {
+  background: #ffffff;
+  color: #000000;
+  position: relative;
+
+  border: 1px solid rgba(213,219,224,255);
+
+  padding: 12px 12px;
+  cursor: pointer;
+
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+
+  order: 0;
+}
+
+.selected::after {
+  content: "";
+  background: url("../images/arrow-down.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  position: absolute;
+  height: 100%;
+  width: 32px;
+  right: 10px;
+  top: 5px;
+
+  transition: all 0.4s;
+}
+
+.selected-text{
+  width: 90%;
+  
+  border: hidden;
+  outline: none;
+  box-shadow: none;
+
+  caret-color: transparent;
+  cursor: pointer;
+}
+
+.select-box .options-container.active {
+  max-height: 143px;
+  opacity: 1;
+  overflow-y: scroll;
+  margin-top: 54px;
+}
+
+.select-box .options-container.active + .selected::after {
+  transform: rotateX(180deg);
+  top: -6px;
+}
+
+.options-container::-webkit-scrollbar {
+  width: 0.2em;
+}
+
+.options-container::-webkit-scrollbar-track {
+  background-color: rgb(133, 194, 209);
+
+  border-radius: 5px;
+
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.options-container::-webkit-scrollbar-thumb {
+  background-color: rgba(1, 54, 134, 0.849);
+  outline: none;
+
+  border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.select-box .option{
+  padding: 12px 24px;
+  cursor: pointer;
+}
+
+.select-box .option:hover {
+  background: #005ac7;
+}
+
+.select-box label {
+  cursor: pointer;
+}
+
+.select-box .option .radio {
+  display: none;
+}
+
+/* Searchbox */
+
+
+.search-box input {
+  width: 100%;
+  padding: 12px 16px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  position: absolute;
+  border-radius: 5px 5px 5px 5px;
+  z-index: 100;
+  border: 8px solid #0059d4;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+}
+
+.search-box input:focus {
+  outline: none;
+}
+
+.select-box .options-container.active ~ .search-box input {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+
+/* General css end */
