--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -752,6 +752,57 @@ body {
   border-top-left-radius: 0;
 }
 
+/* PCR Styles ---------------------------------------- */
+
+.pcr-toggle-label {
+  min-width: 130px;
+
+  padding-left: 5px;
+
+  border: 1px none rgb(2, 27, 255);
+  border-right-style: none;
+  color: rgb(0, 0, 0);
+
+
+  display: flex;
+  align-items: center;
+
+  text-align: center;
+
+  
+  letter-spacing: 1px;
+
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+
+  /* background-color: rgba(13, 109, 253, 0.849); */
+  /* background-color: rgba(80, 198, 253, 0.781); */
+}
+
+.pcr-toggle-modal-header{
+  border-style: none;
+  padding-bottom: 0px;
+}
+
+.pcr-toggle-modal-body{
+  height: 60px;
+}
+
+.pcr-toggle-input {
+  border-style: none;
+}
+
+.pcr-toggle-footer{
+  padding-top: 0;
+  border-style: none;
+}
+
+.pcr-toggle-submit-btn{
+  font-size: 12pt;
+
+}
+
+
 
 
 
@@ -924,5 +975,94 @@ body {
   pointer-events: auto;
 }
 
+
+
+
+
+/* This is the style css for a toggle button */
+.switch {
+  position: relative;
+  display: inline-block;
+  /* size of the toggler */
+  width: 120px; 
+  height: 34px;
+}
+
+.switch .toggle-input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2ab934;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.toggle-input:checked + .slider {
+  background-color: #ca2222 ;
+}
+
+.toggle-input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+.toggle-input:checked + .slider:before {
+
+  /* Final possison of the slider : toggler size - 35 px */
+  -webkit-transform: translateX(85px);
+  -ms-transform: translateX(85px);
+  transform: translateX(85px);
+}
+
+.on {
+  display: none;
+}
+
+.on,
+.off {
+  color: white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.toggle-input:checked + .slider .on {
+  display: block;
+}
+
+.toggle-input:checked + .slider .off {
+  display: none;
+}
+
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 
 /* General css end */
