pcr: added all content to pcr

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1047,6 +1047,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.toggle-font{
+  font-size: 10pt;
+}
+
 .toggle-input:checked + .slider .on {
   display: block;
 }
