created login page without design patterns

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -500,6 +500,9 @@ body {
   transition: 50ms ease-in;
 }
 
+#login-errors{
+  color: red;
+}
 
 /* Vaccination page ----------------------------------------------------------------------------------- */
 
