covid death - fixed some edge cases

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -525,6 +525,11 @@ body {
   display: flex;
 }
 
+#covid_death-add{
+  position: relative;
+  float: right;
+}
+
 .covid-search {
   position: relative;
 
