--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,11 +135,16 @@ body {
 .dashboard-container {
   height: 100%;
   width:100%;
+  
 }
 .dashboard-banner {
+
+  background-color: #0d6dfd60;
+  backdrop-filter: blur(5px);
+
   margin: 0;
   position: relative;
-  bottom: 5px;
+  bottom: 0px;
   padding: 0;
   height: auto;
   display: flex;
@@ -188,12 +193,13 @@ body {
   width: 100%;
   height: 100%;
   top: 0px;
-  left: 5px;
+  left: 0px;
   position: relative;
   display: block;
   overflow: hidden;
   padding-left: 0px;
-  background-color: #0a0bc4;
+  background-color: #0d6dfdd0;
+  backdrop-filter: blur(2px);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .side-minimized {
@@ -808,6 +814,74 @@ body {
 }
 
 
+/* Home page --------------------------------------------------------- */
+.home-main{
+  margin-top: 10px;
+
+  padding: 30px;
+  background-color: rgba(24, 97, 255, 0.144);
+
+  backdrop-filter: blur(2px);
+
+  border-radius: 10px;
+
+}
+
+.home-carousel{
+  background-color: white;
+
+  border-radius: 10px;
+  
+  padding: 1px;
+}
+
+
+.home-carousel-img{
+  height: 400px;
+
+  border-radius: 10px;
+}
+
+.home-header-title{
+  margin-top: 30px;
+
+  padding: 10px;
+  padding-bottom: 50px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  text-align: center;
+}
+
+.home-header{
+  width: 100%;
+}
+
+.home-title{
+  letter-spacing: 8px;
+}
+
+.home-subtitle{
+  letter-spacing: 3px;
+  font-size: 10pt;
+}
+
+/* Charts */
+.home-graph{
+  width: fit-content;
+  padding: 10px;
+
+  margin-top: 30px;
+
+  border-radius: 10px;
+  background-color: #88d6fac7;
+
+  border: 1px solid black;
+
+  backdrop-filter: blur(1px);
+}
+
+
 
 
 
@@ -1074,4 +1148,10 @@ body {
   border-radius: 50%;
 }
 
+
+/* squadoption logo css */
+.squadoption-logo{
+  height: 100px;
+  border-radius: 10px;
+}
 /* General css end */
