--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,38 +19,40 @@ body {
 }
 
 /* Used to hide content */
-.hidden{
+.hidden {
   display: none;
 }
 
 /* Animation : Fade in */
-.animation-fade-in{
+.animation-fade-in {
   opacity: 100%;
   transition: all 0.8s ease-in-out;
 }
-.animation-fade-in-pre-state{
+.animation-fade-in-pre-state {
   visibility: hidden;
   opacity: 0;
 }
 
-
 /* index page Styles------------------------------------ */
 
 .index-body {
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, #0d6dfd 50%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    #0d6dfd 50%
+  );
 }
 
-.index-main{
+.index-main {
   position: absolute;
 
   width: 80%;
-  
 
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-
 }
 
 .index-row {
@@ -61,16 +63,15 @@ body {
   display: flex;
 }
 
-.index-login-form{
+.index-login-form {
   padding-top: 100px;
 }
 
-.index-form-container{
+.index-form-container {
   margin-top: 12%;
 
   padding: 20px;
   text-align: center;
-
 }
 
 /* image */
@@ -82,17 +83,16 @@ body {
 
 /* input */
 
-.index-input-container{
+.index-input-container {
   width: 100%;
   padding: 10px;
 
   padding-bottom: 20px;
 }
 
-
 /* Buttons */
 
-.index-btn-container{
+.index-btn-container {
   padding: 10px;
   padding-top: 20px;
 }
@@ -122,23 +122,20 @@ body {
   transition-duration: 0.2s;
 }
 
-.index-form-row{
+.index-form-row {
   display: flex;
 }
 
-.index-team-logo{
+.index-team-logo {
   font-size: 20pt;
 }
-
 
 /*Dashboard Styles ------------------------------------*/
 .dashboard-container {
   height: 100%;
-  width:100%;
-  
+  width: 100%;
 }
 .dashboard-banner {
-
   background-color: #0d6dfd60;
   backdrop-filter: blur(5px);
 
@@ -185,8 +182,8 @@ body {
   box-sizing: border-box;
 }
 
-.admin{
-  width:20%;
+.admin {
+  width: 20%;
 }
 .dashboard-side-bar {
   margin: 0;
@@ -214,7 +211,7 @@ body {
   width: 100%;
   font-family: "Montserrat", sans-serif;
   text-align: center;
-  overflow:hidden;
+  overflow: hidden;
 }
 .dashboard-text {
   position: relative;
@@ -276,68 +273,66 @@ body {
   margin-bottom: 120px;
 }
 
-.admin-settings{
+.admin-settings {
   margin-bottom: 280px;
 }
 @media screen and (max-width: 1200px) {
-  .dashboard-sidebar-container{
-    width:60px;
+  .dashboard-sidebar-container {
+    width: 60px;
   }
   .dashboard-side-bar {
     width: 60px;
   }
 }
 /*sub divisions styles--------------------------*/
-.sub-division{
+.sub-division {
   padding-right: 15px;
   margin: 0;
-  float:right;
-  right:0;
-  height:100%;
-  width:79%;
-  
+  float: right;
+  right: 0;
+  height: 100%;
+  width: 79%;
 }
 
-.sub-division-user{
+.sub-division-user {
   width: 81%;
 }
 
 @media screen and (max-width: 1200px) {
-  
-  .sub-division{
-    width:94%;
-    position:relative;
-    left:70px;
+  .sub-division {
+    width: 94%;
+    position: relative;
+    left: 70px;
   }
 }
 /*data management division styles---------------*/
-.data-heading{
+.data-heading {
   border-bottom: black 1px solid;
 }
-.data-search-bar{
+.data-search-bar {
   padding-top: 2%;
   padding-bottom: 4%;
 }
-.data-table{
-  border-top:grey 1px solid;
-  box-shadow:0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.data-table {
+  border-top: grey 1px solid;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-bottom: grey 1px solid;
   font-size: 14px;
 }
-.data-edit{
+.data-edit {
   font-size: 20px;
 }
-.data-delete{
+.data-delete {
   padding-top: 2px;
 }
-.division-maximized{
+.division-maximized {
   width: 95%;
 }
-.data-edit-button{
+.data-edit-button {
   font-size: 20px;
   padding: 0;
 }
-.data-select-li{
+.data-select-li {
   margin: 10px 1px;
   padding: 5px;
   line-height: 25px;
@@ -349,59 +344,56 @@ body {
 }
 
 /*Settings sub division*/
-.settings-heading{
-  position:fixed;
+.settings-heading {
+  position: fixed;
   background-color: white;
   width: 100%;
 }
-.settings-body{
+.settings-body {
   margin-top: 50px;
 }
-.settings-navigation{
+.settings-navigation {
   padding-top: 60px;
 }
 .settings-info-link,
-.settings-password-link{
+.settings-password-link {
   border-bottom: rgba(10, 84, 180, 0.747) solid 1px;
-  
 }
 .settings-info-link a,
-.settings-password-link a{
+.settings-password-link a {
   text-decoration: none;
   padding: 10px;
   color: black;
-  
 }
-.settings-arrow{
+.settings-arrow {
   position: relative;
-  top:20px;
-  left:150px;
+  top: 20px;
+  left: 150px;
 }
-.settings-info{
+.settings-info {
   border: grey solid 1px;
   border-radius: 10px;
   padding: 35px;
   margin: 50px;
 }
-.settings-info-element{
+.settings-info-element {
   margin: 15px 0 15px 0;
 }
 #same-password,
-#matching-passwords{
+#matching-passwords {
   color: red;
 }
-#old_password{
+#old_password {
   margin-bottom: 50px;
 }
 /*DEO subdivision related*/
 
-
-.deo-manage-rm-btn{
+.deo-manage-rm-btn {
   border-width: 0;
   background-color: transparent;
 }
 
-.deo-manage-new-deo-form{
+.deo-manage-new-deo-form {
   height: auto;
   width: 60%;
   background-color: white;
@@ -410,14 +402,12 @@ body {
   left: 25%;
   border-radius: 25px;
   padding: 30px;
-  
 }
 
-.bg-blur{
+.bg-blur {
   filter: blur(8px);
   -webkit-filter: blur(8px);
 }
-
 
 /* registration form styles -------------------------------*/
 
@@ -512,7 +502,7 @@ body {
   transition: 50ms ease-in;
 }
 
-#login-errors{
+#login-errors {
   color: red;
 }
 
@@ -535,7 +525,7 @@ body {
   display: flex;
 }
 
-#covid_death-add{
+#add-button {
   position: relative;
   float: right;
 }
@@ -580,7 +570,6 @@ body {
   padding: 10px;
 
   border-radius: 5px;
-
 }
 
 .covid-patient-detail {
@@ -654,19 +643,17 @@ body {
 
 /* Search result not found division */
 
-.covid-sad-face{
-
+.covid-sad-face {
   display: flex;
   justify-content: center;
   width: 100%;
-  
 }
 
-.covid-sad-face-img{
+.covid-sad-face-img {
   height: 150px;
 }
 
-.covid-no-result-message{
+.covid-no-result-message {
   width: 100%;
   font-size: 20pt;
 
@@ -710,13 +697,11 @@ body {
   border-right-style: none;
   color: rgb(0, 0, 0);
 
-
   display: flex;
   align-items: center;
 
   text-align: center;
 
-  
   letter-spacing: 1px;
 
   border-bottom-left-radius: 5px;
@@ -726,7 +711,7 @@ body {
   /* background-color: rgba(80, 198, 253, 0.781); */
 }
 
-.covid-form-comment{
+.covid-form-comment {
   width: 100%;
   text-align: center;
 }
@@ -743,11 +728,8 @@ body {
   outline: none;
 }
 
-
-
-
-.covid-textarea{
-  resize:none;
+.covid-textarea {
+  resize: none;
 }
 
 .covid-textarea::-webkit-scrollbar {
@@ -783,13 +765,11 @@ body {
   border-right-style: none;
   color: rgb(0, 0, 0);
 
-
   display: flex;
   align-items: center;
 
   text-align: center;
 
-  
   letter-spacing: 1px;
 
   border-bottom-left-radius: 5px;
@@ -799,12 +779,12 @@ body {
   /* background-color: rgba(80, 198, 253, 0.781); */
 }
 
-.test-toggle-modal-header{
+.test-toggle-modal-header {
   border-style: none;
   padding-bottom: 0px;
 }
 
-.test-toggle-modal-body{
+.test-toggle-modal-body {
   height: 60px;
 }
 
@@ -812,36 +792,32 @@ body {
   border-style: none;
 }
 
-.test-toggle-footer{
+.test-toggle-footer {
   padding-top: 0;
   border-style: none;
 }
 
-.test-toggle-submit-btn{
+.test-toggle-submit-btn {
   font-size: 12pt;
-
 }
-
 
 /* Home page --------------------------------------------------------- */
 
-
-.home-carousel{
+.home-carousel {
   background-color: white;
 
   border-radius: 10px;
-  
+
   padding: 1px;
 }
 
-
-.home-carousel-img{
+.home-carousel-img {
   height: 400px;
 
   border-radius: 10px;
 }
 
-.home-header-title{
+.home-header-title {
   margin-top: 30px;
 
   padding: 10px;
@@ -852,21 +828,21 @@ body {
   text-align: center;
 }
 
-.home-header{
+.home-header {
   width: 100%;
 }
 
-.home-title{
+.home-title {
   letter-spacing: 8px;
 }
 
-.home-subtitle{
+.home-subtitle {
   letter-spacing: 3px;
   font-size: 10pt;
 }
 
 /* Charts */
-.home-graph{
+.home-graph {
   width: fit-content;
   padding: 10px;
 
@@ -879,13 +855,6 @@ body {
 
   backdrop-filter: blur(1px);
 }
-
-
-
-
-
-
-
 
 /* 
 -
@@ -904,7 +873,7 @@ body {
 */
 
 /* General css for dash board */
-.sub-division-main{
+.sub-division-main {
   margin-top: 10px;
 
   min-height: 100%;
@@ -915,7 +884,6 @@ body {
   backdrop-filter: blur(2px);
 
   border-radius: 10px;
-
 }
 
 /* This is a general css can be used for all the dropdowns */
@@ -929,7 +897,6 @@ body {
   border-radius: 5px;
 
   width: 100%;
-  
 }
 
 .select-box .options-container {
@@ -953,7 +920,7 @@ body {
   color: #000000;
   position: relative;
 
-  border: 1px solid rgba(213,219,224,255);
+  border: 1px solid rgba(213, 219, 224, 255);
 
   padding: 12px 12px;
   cursor: pointer;
@@ -979,9 +946,9 @@ body {
   transition: all 0.4s;
 }
 
-.selected-text{
+.selected-text {
   width: 90%;
-  
+
   border: hidden;
   outline: none;
   box-shadow: none;
@@ -1024,7 +991,7 @@ body {
   border-top-left-radius: 0;
 }
 
-.select-box .option{
+.select-box .option {
   padding: 12px 24px;
   cursor: pointer;
 }
@@ -1042,7 +1009,6 @@ body {
 }
 
 /* Searchbox */
-
 
 .search-box input {
   width: 100%;
@@ -1068,16 +1034,12 @@ body {
   pointer-events: auto;
 }
 
-
-
-
-
 /* This is the style css for a toggle button */
 .switch {
   position: relative;
   display: inline-block;
   /* size of the toggler */
-  width: 120px; 
+  width: 120px;
   height: 34px;
 }
 
@@ -1110,7 +1072,7 @@ body {
 }
 
 .toggle-input:checked + .slider {
-  background-color: #ca2222 ;
+  background-color: #ca2222;
 }
 
 .toggle-input:focus + .slider {
@@ -1118,7 +1080,6 @@ body {
 }
 
 .toggle-input:checked + .slider:before {
-
   /* Final possison of the slider : toggler size - 35 px */
   -webkit-transform: translateX(85px);
   -ms-transform: translateX(85px);
@@ -1140,7 +1101,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.toggle-font{
+.toggle-font {
   font-size: 10pt;
 }
 
@@ -1152,7 +1113,6 @@ body {
   display: none;
 }
 
-
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
@@ -1162,9 +1122,8 @@ body {
   border-radius: 50%;
 }
 
-
 /* squadoption logo css */
-.squadoption-logo{
+.squadoption-logo {
   height: 100px;
   border-radius: 10px;
 }
