--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,11 +114,17 @@ body {
   transition-duration: 0.2s;
 }
 
-.index-btn1:hover {
+/*.index-btn1:hover {
   background: white;
   border: 1px solid #0d6dfd;
   color: #0d6dfd;
+  transition-duration: 0.2s;
+}*/
 
+.index-hover:hover{
+  background: white;
+  border: 1px solid #0d6dfd;
+  color: #0d6dfd;
   transition-duration: 0.2s;
 }
 
