--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,16 @@ body {
   display: none;
 }
 
+/* use to put an overlay */
+.overlay{
+  background-color: rgba(0, 153, 255, 0.158);
+  backdrop-filter: blur(2px);
+
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+}
 /* Animation : Fade in */
 .animation-fade-in {
   opacity: 100%;
@@ -482,7 +492,7 @@ body {
 .register-wrapper {
   height: auto;
   width: 40%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.801);
   position: absolute;
   top: 10%;
   left: 30%;
