--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,8 +25,8 @@ body {
 
 /* use to put an overlay */
 .overlay{
-  background-color: rgba(0, 153, 255, 0.158);
-  backdrop-filter: blur(2px);
+  background-color: rgba(255, 255, 255, 0.116);
+  backdrop-filter: blur(3px);
 
   height: 100vh;
   width: 100vw;
@@ -492,7 +492,9 @@ body {
 .register-wrapper {
   height: auto;
   width: 40%;
-  background-color: rgba(255, 255, 255, 0.801);
+  background-color: rgba(182, 220, 255, 0.801);
+  color: rgb(0, 0, 0);
+
   position: absolute;
   top: 10%;
   left: 30%;
