--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -495,6 +495,8 @@ body {
   background-color: rgba(182, 220, 255, 0.801);
   color: rgb(0, 0, 0);
 
+  border: #0d6efd solid 1px;
+
   position: absolute;
   top: 10%;
   left: 30%;
